Serving HTML pages

--- a/5. Working with Express.js/views/add-product.html
+++ b/5. Working with Express.js/views/add-product.html
@@ -12,12 +12,12 @@
     <header>
         <nav>
             <li><a href="/">Shop</a></li>
-            <li><a href="/add-product">Add Product</a></li>
+            <li><a href="/admin/add-product">Add Product</a></li>
         </nav>
     </header>
 
     <main>
-        <form action="/add-product" method="post">
+        <form action="/admin/add-product" method="post">
             <input type="text" name="title" id="title">
             <button type="submit">Add
                 Product</button>
