--- a/5. Working with Express.js/views/shop.html
+++ b/5. Working with Express.js/views/shop.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <li><a href="/">Shop</a></li>
-            <li><a href="/add-product">Add Product</a></li>
+            <li><a href="/admin/add-product">Add Product</a></li>
         </nav>
     </header>
 
