--- a/8. Enhancing the App/views/includes/navigation.ejs
+++ b/8. Enhancing the App/views/includes/navigation.ejs
@@ -16,6 +16,10 @@
                     >Cart</a
                 >
             </li>
+                <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders"
+                    >Orders</a
+                >
+            </li>
 
             <li class="main-header__item">
                 <a
